--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 	<section class="full pink">
 		<div class="container-fluid">
 			<img src="resources/CC.jpg" class="img-circle">
-			<h1>Céline Chen</h1>
+			<h1 class="name">Céline Chen</h1>
 			<h3>Engineering student</h3>
-			<h5>Media Technology enthusiast - UX/UI - 3D graphism</h5> <br />
+			<h5>Media Technology - UX/UI - 3D </h5> <br />
 			<p>
 				<h2>
 					<a href="mailto:celinec@kth.se"><span class="glyphicon glyphicon-envelope"></span></a>
@@ -47,7 +47,6 @@
 				<p class="description">
 					This is a mapstr-inspired web application optimized for iOS devices, where the user can pin their favourite places on their personal map. <br />
 					Features include geolocalization, custom controls on the map, switching roadmap to satellite view and 45° tilt. <br />
-					The user can edit the name, the color of the marker, and the description of each pin. It's also possible to move the pin by dragging it to a desired localization.
 				</p>
 				<p class="details">
 					<span class="glyphicon glyphicon-calendar"></span> April 2016 <br />
@@ -72,12 +71,11 @@
 					<p>
 					<br />
 						<h1>Planner</h1>
-						<h5>bootstrap | jquery UI</h5>
+						<h5>bootstrap | jquery UI | MVC model</h5>
 					</p>
 					<p class="description">
-						This is a web planner application that my friend and I developped for our Interaction Programming class. <br />
-						Functionnalities include day/event creation and editing, with a specific name, duration, description and category. The user can also change the order of days or events by drag and dropping them. <br />
-						We paid special attention to the website's architecture (using the MVC model), but we mainly focused on design and user interaction.
+						This is a web planner application where the user can create days and events with a specific name/description/duration/category, and edit them.
+						The user can also change the order of days or events by drag and dropping them.
 					</p>
 					<p class="details">
 						<span class="glyphicon glyphicon-calendar"></span> March 2016 <br />
@@ -99,9 +97,29 @@
 	</section>
 
 	<section class="full lilac">
-		<div class="container">
-			<h1>VIC Studio Dataviz</h1>
-			<h3>d3.js | jquery</h3>
+		<div class="row flex-row">
+			<div class="col-md-3 col-xs-12 col-sm-12 col-lg-3">
+				<p>
+					<h1>VICviz</h1>
+					<h5>d3.js | jquery | data visualization</h5>
+				</p>
+
+				<p class="description">
+					This is an information visualization web application, designed to display in an ambient way the frequentation data of KTH's VIC Studio Page.
+				</p>
+				<p class="details">
+					<span class="glyphicon glyphicon-calendar"></span> February 2016 <br />
+					<span class="glyphicon glyphicon-time"></span> 1 week
+				</p>
+			</div>
+
+			<div class="col-md-9 col-xs-12 col-sm-12 col-lg-9 expand-height">
+				<div class="carousel width-first">
+					<div class="carousel-cell"><img src="vic/0.png" class="wImg"></div>
+					<div class="carousel-cell"><img src="vic/1.png" class="wImg"></div>
+					<div class="carousel-cell"><img src="vic/2.png" class="wImg"></div>
+				</div>
+			</div>
 		</div>
 	</section>
 
@@ -121,13 +139,14 @@
 	<script src="https://npmcdn.com/flickity@1.2/dist/flickity.pkgd.min.js"></script>
 
 	<script>
+	// Init flickity. We don't want the size of the cells to be constrained
 	$(".carousel").flickity({"wrapAround": true,"setGallerySize":false});
 
+		// Adapt the size of the window + carousels on resize.
 		$(window).resize(function() {
 			var h = $(window).height();
 			var w = $(window).width();
 			$(".full").attr("style","min-height: " + h + "px; width: " + w + "px;");
-			$("#about").attr("style","height: " + h/3 + "px; width: " + w + "px;");
 			$(".carousel").flickity("resize");
 		});
 
