Update with nabnu and qtube

--- a/index.html
+++ b/index.html
@@ -40,6 +40,69 @@
 		<div class="row flex-row">
 			<div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
 				<p>
+					<h1>nabnu</h1>
+					<h5>VueJS | Firebase | Bootstrap | jQuery | mobile webapp</h5>
+				</p>
+
+				<p class="description">
+					Capture the moment, one a day, everyday<br />
+					Social Media platform where the user can upload only one picture a day, and share it with their followers. 
+					In their feed, the user can swipe right on a friend's photo to like it, left to discard it.
+				</p>
+				<p class="details">
+					<span class="glyphicon glyphicon-calendar"></span> May 2016 <br />
+					<span class="glyphicon glyphicon-time"></span> 2 weeks
+				</p>
+			</div>
+
+			<div class="col-md-6 col-xs-12 col-sm-12 col-lg-6 expand-height">
+				<div class="carousel height-first">
+					<div class="carousel-cell"><img src="nabnu/0.png" class="hImg"></div>
+					<div class="carousel-cell"><img src="nabnu/1.png" class="hImg"></div>
+					<div class="carousel-cell"><img src="nabnu/2.png" class="hImg"></div>
+					<div class="carousel-cell"><img src="nabnu/3.png" class="hImg"></div>
+					<div class="carousel-cell"><img src="nabnu/4.png" class="hImg"></div>
+					<div class="carousel-cell"><img src="nabnu/5.png" class="hImg"></div>
+					<div class="carousel-cell"><img src="nabnu/6.png" class="hImg"></div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="full lilac">
+		<div class="container-fluid no-extra">
+			<div class="row">
+				<div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
+					<p>
+					<br />
+						<h1>QTube</h1>
+						<h5>Angular2 | Typescript | bootstrap | jQuery</h5>
+					</p>
+					<p class="description">
+						This is a mobile-optimized web app that lets the user queue youtube videos to watch them later. The user can also tag them for easy bookmarking, rate and comment them. 
+					</p>
+					<p class="details">
+						<span class="glyphicon glyphicon-calendar"></span> April 2016 <br />
+						<span class="glyphicon glyphicon-time"></span> 1 week
+					</p>
+				</div>
+			</div>
+			<div class="row flex-row expand-width">
+				<div class="col-md-12 col-xs-12 col-lg-12 expand-height">
+					<div class="carousel width-first">
+						<div class="carousel-cell"><img src="qtube/0.png" class="wImg"></div>
+						<div class="carousel-cell"><img src="qtube/1.png" class="wImg"></div>
+						<div class="carousel-cell"><img src="qtube/2.png" class="wImg"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="full blue">
+		<div class="row flex-row">
+			<div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
+				<p>
 					<h1>pinglr</h1>
 					<h5>google maps API | jquery | webapp design</h5>
 				</p>
@@ -120,13 +183,6 @@
 					<div class="carousel-cell"><img src="vic/2.png" class="wImg"></div>
 				</div>
 			</div>
-		</div>
-	</section>
-
-	<section class="full blue">
-		<div class="container">
-			<h1>Pathicular</h1>
-			<h3>google maps API | d3.js | jquery</h3>
 		</div>
 	</section>
 
