Media queries for tablets

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 			<div class="row flex-row expand-width">
 				<div class="col-md-12 col-xs-12 col-lg-12 expand-height">
 					<div class="carousel width-first">
-						<div class="carousel-cell"><img src="qtube/0.png" class="wImg"></div>
-						<div class="carousel-cell"><img src="qtube/1.png" class="wImg"></div>
-						<div class="carousel-cell"><img src="qtube/2.png" class="wImg"></div>
+						<div class="carousel-cell v-align"><img src="qtube/0.png" class="wImg"></div>
+						<div class="carousel-cell v-align"><img src="qtube/1.png" class="wImg"></div>
+						<div class="carousel-cell v-align"><img src="qtube/2.png" class="wImg"></div>
 					</div>
 				</div>
 			</div>
@@ -149,10 +149,10 @@
 			<div class="row flex-row expand-width">
 				<div class="col-md-12 col-xs-12 col-lg-12 expand-height">
 					<div class="carousel width-first">
-						<div class="carousel-cell"><img src="planner/0.png" class="wImg"></div>
-						<div class="carousel-cell"><img src="planner/1.png" class="wImg"></div>
-						<div class="carousel-cell"><img src="planner/2.png" class="wImg"></div>
-						<div class="carousel-cell"><img src="planner/3.png" class="wImg"></div>
+						<div class="carousel-cell v-align"><img src="planner/0.png" class="wImg"></div>
+						<div class="carousel-cell v-align"><img src="planner/1.png" class="wImg"></div>
+						<div class="carousel-cell v-align"><img src="planner/2.png" class="wImg"></div>
+						<div class="carousel-cell v-align"><img src="planner/3.png" class="wImg"></div>
 					</div>
 				</div>
 			</div>
@@ -178,9 +178,9 @@
 
 			<div class="col-md-9 col-xs-12 col-sm-12 col-lg-9 expand-height">
 				<div class="carousel width-first">
-					<div class="carousel-cell"><img src="vic/0.png" class="wImg"></div>
-					<div class="carousel-cell"><img src="vic/1.png" class="wImg"></div>
-					<div class="carousel-cell"><img src="vic/2.png" class="wImg"></div>
+					<div class="carousel-cell v-align"><img src="vic/0.png" class="wImg"></div>
+					<div class="carousel-cell v-align"><img src="vic/1.png" class="wImg"></div>
+					<div class="carousel-cell v-align"><img src="vic/2.png" class="wImg"></div>
 				</div>
 			</div>
 		</div>
